project2/test/test_11713020_6.out
Error type 14 at Line 8: no such member: weight1
Error type 5 at Line 8: unmatching type on both sides of assignment
