project2/test/test_11713020_6.spl
struct Apple
{
  int weight;
};
int test_11713020_6()
{
  struct Apple aa;
  aa.weight1 = 1;
}